--- a/project/vercel.json
+++ b/project/vercel.json
@@ -1,11 +1,14 @@
 {
-    "version": 2,
-    "builds": [
-        { "src": "api/*.py", "use": "@vercel/python" },
-        { "src": "public/*", "use": "@vercel/static" }
-    ],
-    "routes": [
-        { "src": "/api/(.*)", "dest": "api/calculate.py" },
-        { "src": "/(.*)", "dest": "/index.html" }
-    ]
+  "builds": [
+    {
+      "src": "index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.py"
+    }
+  ]
 }
